--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -8,6 +8,7 @@
     //Grid
     display: grid;
     grid-template-rows: 8rem repeat(4, max-content);
+    grid-template-columns: 1fr;
     @media only screen and (max-width: $bp-large) {
         grid-row-gap: 8rem;
     }
@@ -15,7 +16,7 @@
         grid-row-gap: 6rem;
     }
     @media only screen and (max-width: $bp-small) {
-        grid-row-gap: 4rem;
+        grid-row-gap: 2rem;
     }
 
     &__header {
@@ -28,6 +29,10 @@
         grid-template-columns: min-content repeat(3, 1fr) min-content;
         grid-template-rows: min-content 1fr;
         margin-bottom: 6rem;
+        @media only screen and (max-width: $bp-small) {
+            grid-template-columns: 1fr;
+            grid-template-rows: min-content repeat(3, 1fr) min-content;
+        }
     }
 
     &__heading {
@@ -48,6 +53,7 @@
         grid-column-gap: 4rem;
         align-items: center;
         justify-content: center;
+        overflow: hidden;
 
         &::after,
         &::before {
@@ -55,6 +61,10 @@
             height: 1px;
             display: block;
             background-color: currentColor;
+        }
+
+        @media only screen and (max-width: $bp-smallest) {
+            grid-column-gap: 1rem;
         }
     }
 
@@ -69,6 +79,9 @@
             fill: $color-primary;
             transform: translateX(0.6rem);
         }
+        @media only screen and (max-width: $bp-small) {
+            display: none;
+        }
     }
     &__arrow-left {
         height: 100%;
@@ -80,6 +93,9 @@
         &:hover {
             fill: $color-primary;
             transform: translateX(-0.6rem);
+        }
+        @media only screen and (max-width: $bp-small) {
+            display: none;
         }
     }
 
@@ -110,6 +126,12 @@
         @media only screen and (max-width: $bp-medium) {
             margin: 0.5rem;
         }
+        @media only screen and (max-width: $bp-small) {
+            margin: 2rem 10rem;
+        }
+        @media only screen and (max-width: $bp-smallest) {
+            margin: 2rem 8rem;
+        }
 
         &-img {
             grid-row: 1 / 2;
@@ -117,6 +139,7 @@
             z-index: 1;
             width: 100%;
         }
+
         &-like {
             grid-row: 1 / 2;
             grid-column: 2 / 3;
@@ -175,6 +198,9 @@
                 font-size: 1rem;
                 padding: 0rem;
                 margin: 0 0.5rem;
+            }
+            @media only screen and (max-width: $bp-small) {
+                text-align: center;
             }
         }
 
