--- a/sass/_cta.scss
+++ b/sass/_cta.scss
@@ -86,6 +86,7 @@
 
     &__form {
         display: flex;
+
         &-input {
             background-color: #fff;
             border: 0;
@@ -103,7 +104,8 @@
                 padding: 0 20rem 0 2rem;
             }
             @media only screen and (max-width: $bp-small) {
-                padding: 0 10rem 0 2rem;
+                padding: 2rem 10rem 2rem 2rem;
+                font-size: 1.4rem;
             }
         }
         &-button {
@@ -119,6 +121,9 @@
                 font-size: 2rem;
                 font-weight: 200;
                 color: $color-light;
+                @media only screen and (max-width: $bp-small) {
+                    font-size: 1.4rem;
+                }
             }
 
             &:hover {
@@ -130,10 +135,6 @@
                 outline: none;
                 transform: translateY(-0.1rem);
                 box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
-            }
-
-            @media only screen and (max-width: $bp-small) {
-                padding: 1rem 1.2rem;
             }
         }
     }
