--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -11,6 +11,10 @@
     &__logo {
         width: 55rem;
         height: auto;
+
+        @media only screen and (max-width: $bp-medium) {
+            width: 35rem;
+        }
     }
 
     &-nav {
